--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p1> We’ve been baking and brewing for over 10 years already! Anyone who’s tried our delicious food at least once is now our loyal customer.</p1>
     <br>
     <br>
-    <table border="|" width="250" >
+    <table border="1" width="250" >
         <tr>
             <td> name </td>
             <td> price </td>
