--- a/contactus.html
+++ b/contactus.html
@@ -20,7 +20,8 @@
                 <textarea id="message" cols="30" rows="10"></textarea>
                 </div>
                 </form>
-            
+                <a href="./contactus.html">Contact us</a>
+
         
         </body>
     </head>
